fixed modal styles, alignment of save and cancel button and remove button

--- a/tether/src/components/CreateModal/CreateModal.scss
+++ b/tether/src/components/CreateModal/CreateModal.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 700px;
+  width: 750px;
   height: 70vh;
   padding: 16px 40px;
 
@@ -19,7 +19,7 @@
     color: grey;
     margin: 0;
     &--second {
-      margin-left: 387px;
+      margin-left: 428px;
     }
   }
   &__row {
@@ -35,10 +35,10 @@
 
   &__input {
     font-size: 16px;
-    width: 400px;
+    width: 450px;
     height: 45px;
     padding-top: 2px;
-    padding-left: 20px;
+    padding-left: 18px;
     border: 1px solid lightgrey;
     border-radius: 5px;
     background: #FAFAFA;
@@ -57,6 +57,7 @@
   }
   &__remove-btn {
     font-size: 14px;
+    width: 75px;
     height: 45px;
     outline: none;
     border: none;
@@ -64,7 +65,9 @@
     background-color: white;
     border: 1px solid lightgrey;
     &:hover {
+      font-weight: bold;
       border: 1px solid darkgrey;
+      cursor: pointer;
     }
   }
   &__add-btn {
@@ -87,20 +90,25 @@
   &__button {
     font-size: 16px;
     height: 50px;
-    width: 150px;
+    width: 125px;
     background-color: white;
     margin-bottom: 16px;
     outline: none;
     border: none;
     border-radius: 5px;
-    font-family: Helvetica;
     color:#1457DB;
     cursor: pointer;
+    &:hover {
+      font-weight: bold;
+    }
 
     &--blue {
       background-color: #1457DB;
       color: white;
       cursor: pointer;
+      &:hover {
+        font-weight: bold;
+      }
     }
   }
 }
